# seller_parser

./: bot.py  clothes.json  parser.py  pyproject.toml  resell.db  sturct.md  test.py
