[project]
name = "resell-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ArtemKalinin10",email = "artemkalininloveanime@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "datetime (>=6.0,<7.0)",
    "selenium (>=4.40.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
